[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Images/label_bg.png" type="Texture" id=1]
[ext_resource path="res://Assets/Audio/hit2.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Audio/shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Images/effect_ball.png" type="Texture" id=4]
[ext_resource path="res://TargetText/TargetText.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=6]
[ext_resource path="res://Assets/Images/enemy_orb.png" type="Texture" id=7]
[ext_resource path="res://Bullet/Bullet.tscn" type="PackedScene" id=8]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CircleShape2D" id=2]
radius = 37.1214

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=5]

[sub_resource type="Animation" id=6]
resource_name = "Focused"
length = 0.1
loop = true

[sub_resource type="Animation" id=7]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySpr:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.980392, 0.0627451, 0.815686, 1 ), Color( 0.0431373, 0.917647, 0.960784, 1 ) ]
}

[node name="Enemy" type="KinematicBody2D"]
self_modulate = Color( 0.976471, 0.0627451, 0.360784, 1 )
material = SubResource( 1 )
collision_layer = 4
script = ExtResource( 6 )
bullet_scene = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="BodySpr" type="Sprite" parent="."]
self_modulate = Color( 0.379904, 0.610471, 0.908649, 1 )
material = SubResource( 3 )
texture = ExtResource( 7 )

[node name="FocusOrb" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.972549, 0.0313726, 0.0313726, 0.352941 )
material = SubResource( 4 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="WordBg" type="NinePatchRect" parent="."]
self_modulate = Color( 0, 0, 0, 0.415686 )
material = SubResource( 5 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -203.0
margin_top = -1.0
margin_right = 203.0
margin_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 1 )
patch_margin_left = 15
patch_margin_top = 30
patch_margin_right = 15
patch_margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetPhrase" parent="WordBg" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -162.0
margin_top = -28.0
margin_right = 162.0
margin_bottom = 22.0
rect_scale = Vector2( 0.986419, 0.997748 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Focused = SubResource( 6 )
anims/Main = SubResource( 7 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="ShootAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0

[node name="DieAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -20.0
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
